fixing some unit tests